# mystudy

./: .gitignore  README.md
algbase/: README.md
algbase/beam_decode/: CMakeLists.txt  beam_decode.cpp  beam_decode.h  demo.cpp
algbase/beam_decode/python/: beam_decode.py  data.yml
algbase/contour_detection/: CMakeLists.txt
algbase/contour_detection/include/: contour_detection.h
algbase/contour_detection/source/: detection.cpp  main.cpp  tracking.cpp
algbase/dwt/: CMakeLists.txt  dwt.cpp  dwt.h  main.cpp
algbase/guassian_process/: gpmain.py
algbase/inpaint_fmm/: CMakeLists.txt
algbase/inpaint_fmm/inc/: inpaint.h
algbase/inpaint_fmm/src/: demo.cpp  inpaint.cpp
algbase/km/: CMakeLists.txt
algbase/km/src/: main.cpp
algbase/lda/: CMakeLists.txt  README.md
algbase/lda/inc/: lda.h
algbase/lda/src/: demo.cpp  lda.cpp
algbase/logistic_regression/: CMakeLists.txt  README.md  demo.cpp  logreg.cpp  logreg.h
algbase/pca/: CMakeLists.txt  README.md
algbase/pca/inc/: pca.h
algbase/pca/src/: demo.cpp  pca.cpp
algbase/peak_search/: AMPD.py
algbase/regression/: CMakeLists.txt  README.md
algbase/regression/include/: regression.h  vector_ops.h
algbase/regression/source/: demo.cpp  gradient_decent.cpp  least_square_mean.cpp  regression.cpp  vector_ops.cpp
algbase/roadline_detection/baseline/: baseline_opencv.py
algbase/stroke_width_transform/: CMakeLists.txt
algbase/stroke_width_transform/inc/: stroke_width_transform.h
algbase/stroke_width_transform/src/: main.cpp  stroke_width_transform.cpp
algbase/tree/basic_decision_regression/: CMakeLists.txt  README.md
algbase/tree/basic_decision_regression/inc/: basic_tree.h  utils.h
algbase/tree/basic_decision_regression/python/: csvDAE.py
algbase/tree/basic_decision_regression/src/: basic_tree.cpp  demo.cpp  utils.cpp
algbase/watermark/: CMakeLists.txt  README.md  demo.cpp  watermark.cpp  watermark.h
crawler/baiduzhidao/: analysis.py  main.py  whatismybrowser.py
funny_codes/: monty_hall_sim.py  possion_editing.py  shape_of_go.py
genetric_algorithm/: main.py
genetric_algorithm/survive_game/: main.py
genetric_algorithm/survive_game/output/: 315_0.0819.json  316_0.0867.json  317_0.0812.json  318_0.0828.json  319_0.0810.json  320_0.0840.json  321_0.0812.json  (+23 more)
image_searching/baseline/: README.md  dataiter.py  demo.py  network.py  train.py
image_segment/unext/: README.md  archs.py  dataset.py  default_config.yml  train.py  utils.py  val.py
landmarks/hrnet/: README.md  test.py  train.py
reinforcement_learning/sc2/: .gitignore  README.md  agentsc2.py  burnysc2.py  game.py  gymtestbed.py  start_game.py  utils.py
special_image_effects/: README.md
special_image_effects/facelike/: main_camera.py  vis_face_clusters.py
speech_process/voice_change/: main.py
tensorflow/captchaOCR/: README.md  client_recognize.py  config.json  gen_images.py  task_crnn_train.py  task_detect_train.py  task_exports.py  task_ocr_train.py  task_segment_train.py  task_toy_train.py  webserver_captcha_image.py  webserver_recognize_api.py
(+85 files in other folders)
